# Code-Translation-using-NL-Specification

./: .gitignore  Constants.py  OpenAICall.py  README.md  Tuple.java  all_errors_fixation.py  cleanup_avatar_test.py  combine_debug_results.py  compilation_errors_fixation.py  compiler.py  determine_parameter_type.py  evaluate_translation.sh  gen_nlspec.py  generate_pseudocode.sh  generate_translation_using_source_code.sh  generate_translations.sh  generate_translations_nl.sh  generate_translations_nl_sc.sh  generate_translations_sc.sh  local_model.py  nlspec_adapter.py  nlspec_gen.py  pipeline.py  pipeline_avatar_codenet.py  prep_results.py  prep_results_by_model.py  prepare_jsons_for_significance_test.py  prepare_sonarqube_repaired_files_commands.sh  prepare_sonarqube_translations.py  pseudocode_generation.py  repair_all_errors.sh  repair_compilation_errors.sh  requirements.txt  run_all_stats.py  significance_metrics.py  significance_test.py  significant_overleaf_table.py  translation_evaluation.py  translation_evaluation_evalplus.py  translation_evaluation_evalplus_LIT.py  (+8 more)
batches/: create_batch_generate_nl.sh  generate_nl_spec_avatar_Java.sh  generate_nl_spec_avatar_py.sh  (+3 more)
quality/: CMakeLists.txt  analyse_pair.sh  analysis_lit.sh  analysis_ours.sh  boxplots.py  change_visibility.py  create_batches.sh  download_missing.py  download_missing_lit.py  download_missings.py  gen_pie_chart.py  get_info.py  issue_analysis_top_10.py  overleaf.py  overleaf_with_lit.py  plots_with_lit.py  prep_sonar_models_table.py  prep_sonar_tags.py  quality_analysis.sh  tags.json  template.sh
(+11 files in other folders)
